// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when props are defined should match snapshot 1`] = `
.c0 {
  border: #b2dfdb;
  background: #dd2c00;
  color: #fff;
  height: 50px;
  width: 100px;
  font-size: 18px;
  margin: 0 10px;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.c0:hover {
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
  background: #c42700;
}

<button
  className="c0"
>
  Text
</button>
`;

exports[`Button when props are undefined Should match snapshot 1`] = `
.c0 {
  border: #b2dfdb;
  background: #00695c;
  color: #cffff9;
  height: 50px;
  width: 100px;
  font-size: 18px;
  margin: 0 10px;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
}

.c0:hover {
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
  background: #005046;
}

<button
  className="c0"
/>
`;
